Implemented pokedex and pokemon list components with unit and ui tests, updated snapshots, added set pokemons action, modified webpack config to only use eslint loader during development, added babel spread operator plugin, eslint now lints every js and jsx file instead of every file, and added styling

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --env.prod -p",
     "dev-build": "webpack --env.dev",
     "dev-server": "webpack-dev-server --env.dev",
-    "lint": "eslint src/**",
+    "lint": "eslint --ext .jsx,.js src",
     "prebuild": "rimraf dist",
     "predev-build": "rimraf dist",
     "server": "http-server",
@@ -26,7 +26,8 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
