--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "whatwg-fetch": "^2.0.3"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
