Implemented pokemon component click event and it now manages it\'s own state, and renamed server script command to start

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .jsx,.js src",
     "prebuild": "rimraf dist",
     "predev-build": "rimraf dist",
-    "server": "http-server",
+    "start": "http-server",
     "test": "jest",
     "update-snapshot": "jest --updateSnapshot",
     "validate": "npm-run-all --parallel lint build test"
